config/kubeflow-install/kustomize/istio-install/base/rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: mixer
  name: istio-policy
spec:
  host: istio-policy.$(namespace).svc.dilab.trace3.internal
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10000
    portLevelSettings:
    - port:
        number: 15004
      tls:
        mode: ISTIO_MUTUAL

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: mixer
  name: istio-telemetry
spec:
  host: istio-telemetry.$(namespace).svc.dilab.trace3.internal
  trafficPolicy:
    connectionPool:
      http:
        http2MaxRequests: 10000
        maxRequestsPerConnection: 10000
    portLevelSettings:
    - port:
        number: 15004
      tls:
        mode: ISTIO_MUTUAL
